--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     },
     "rules": {
       "react/prop-types": "off",
-      "semi": "error"
+      "semi": "error",
+      "indent": ["error", 2]
     }
   }
