--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "rules": {
       "react/prop-types": "off",
       "semi": "error",
-      "indent": ["error", 2]
+      "indent": ["error", 2],
+      "object-curly-spacing": ["warn", "always"]
     }
   }
