--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
+    "dotenv": "^8.2.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.2.5",
@@ -21,14 +22,16 @@
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "@react-native-community/async-storage": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@expo/webpack-config": "^0.12.44",
     "babel-eslint": "^10.1.0",
     "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.12.1",
+    "eslint": "^7.13.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5"
   },
   "private": true
