--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|react-router-native)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@react-native-community/async-storage": "~1.11.0",
     "apollo-boost": "^0.4.9",
     "dotenv": "^8.2.0",
     "expo": "~38.0.8",
+    "expo-linking": "^1.0.5",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.2.5",
     "graphql": "^15.4.0",
@@ -33,8 +37,7 @@
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0",
-    "yup": "^0.29.3",
-    "@react-native-community/async-storage": "~1.11.0"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
